Complete security overhaul and UI improvements
- Fixed panel header alignment with consistent height across all panels
- Implemented comprehensive security middleware with rate limiting, headers, and error sanitization
- Added refresh token mechanism with 15-minute JWT expiry and user-friendly session management
- Enhanced file upload security with magic byte validation and content scanning
- Implemented apply selected moves functionality with checkbox interface
- Added secure credential generation and removed hardcoded defaults
- Updated all dependencies with exact version pinning for security
- Added geographic IP restrictions via nginx GeoIP for Australian users only
- Comprehensive documentation for all security implementations
- Fixed fast-deploy script and user permission management

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -209,12 +209,8 @@ jobs:
     if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     
     steps:
-    - name: Run Trivy vulnerability scanner on latest image
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: 'enaran/rms-defragmenter:latest'
-        format: 'table'
-        severity: 'CRITICAL,HIGH,MEDIUM'
+    - name: Checkout code
+      uses: actions/checkout@v4
         
     - name: Run Trivy filesystem scan
       uses: aquasecurity/trivy-action@master
@@ -222,10 +218,29 @@ jobs:
         scan-type: 'fs'
         format: 'sarif'
         output: 'trivy-fs-results.sarif'
+        severity: 'CRITICAL,HIGH,MEDIUM'
+        
+    - name: Run Trivy filesystem scan (table format for summary)
+      uses: aquasecurity/trivy-action@master
+      with:
+        scan-type: 'fs'
+        format: 'table'
+        severity: 'CRITICAL,HIGH,MEDIUM'
+        
+    - name: Check if SARIF file exists
+      id: check_sarif
+      run: |
+        if [ -f trivy-fs-results.sarif ]; then
+          echo "sarif_exists=true" >> $GITHUB_OUTPUT
+          echo "✅ SARIF file created successfully"
+        else
+          echo "sarif_exists=false" >> $GITHUB_OUTPUT
+          echo "❌ SARIF file not found"
+        fi
         
     - name: Upload Trivy scan results
       uses: github/codeql-action/upload-sarif@v3
-      if: always()
+      if: steps.check_sarif.outputs.sarif_exists == 'true'
       with:
         sarif_file: 'trivy-fs-results.sarif'
 
