--- a/env.example
+++ b/env.example
@@ -5,6 +5,8 @@
 # Copy this file to .env and update with your actual credentials
 # 
 # SECURITY NOTE: Never commit the .env file to version control!
+# The application now generates cryptographically secure default values automatically.
+# Use the Setup Wizard or installation script for automatic secure configuration.
 
 # ==============================================================================
 # RMS API CREDENTIALS (REQUIRED for both applications)
@@ -23,7 +25,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=defrag_db
 DB_USER=defrag_user
-DB_PASSWORD=DefragDB2024!
+DB_PASSWORD=WILL_BE_GENERATED_SECURELY_DURING_SETUP
 
 # ==============================================================================
 # WEB APPLICATION CONFIGURATION
@@ -31,12 +33,12 @@ DB_PASSWORD=DefragDB2024!
 # Web server settings
 WEB_APP_PORT=8000
 WEB_APP_HOST=0.0.0.0
-SECRET_KEY=your-secret-key-here-change-this-in-production
-JWT_SECRET_KEY=your-jwt-secret-key-here-change-this-in-production
+SECRET_KEY=WILL_BE_GENERATED_SECURELY_DURING_SETUP
+JWT_SECRET_KEY=WILL_BE_GENERATED_SECURELY_DURING_SETUP
 
 # Admin account configuration (set during installation)
 ADMIN_USERNAME=admin
-ADMIN_PASSWORD=your-secure-admin-password-here
+ADMIN_PASSWORD=WILL_BE_GENERATED_OR_SET_DURING_INSTALLATION
 
 # Property data refresh interval (hours)
 PROPERTY_REFRESH_INTERVAL_HOURS=1
