--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
       - DB_PORT=5433
       - DB_NAME=${DB_NAME:-defrag_db}
       - DB_USER=${DB_USER:-defrag_user}
-      - DB_PASSWORD=${DB_PASSWORD:-DefragDB2024!}
-      - SECRET_KEY=${SECRET_KEY:-your-secret-key-change-in-production}
-      - JWT_SECRET_KEY=${JWT_SECRET_KEY:-your-jwt-secret-key-change-in-production}
+      - DB_PASSWORD=${DB_PASSWORD:-SECURE_DB_PASSWORD_REQUIRED}
+      - SECRET_KEY=${SECRET_KEY:-SECURE_SECRET_KEY_REQUIRED}
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY:-SECURE_JWT_KEY_REQUIRED}
       - AGENT_ID=${AGENT_ID}
       - AGENT_PASSWORD=${AGENT_PASSWORD}
       - CLIENT_ID=${CLIENT_ID}
@@ -63,7 +63,7 @@ services:
     environment:
       POSTGRES_DB: ${DB_NAME:-defrag_db}
       POSTGRES_USER: ${DB_USER:-defrag_user}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-DefragDB2024!}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-SECURE_DB_PASSWORD_REQUIRED}
       PGPORT: 5433
     volumes:
       - postgres_data:/var/lib/postgresql/data
