--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       postgres:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "./health_check.sh"]
+      test: ["CMD", "/app/scripts/health_check.sh"]
       interval: 30s
       timeout: 10s
       retries: 3
