--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ version: "3.8"
 services:
   # RMS Defragmenter Web Application
   defrag-app:
-    # Use prebuilt image but bind-mount code to avoid rebuilds over Tailscale
+    # Use prebuilt image with bind-mounts for fast-deploy (no rebuilds needed)
     image: enaran/rms-defragmenter:latest
     container_name: defrag-app
     restart: unless-stopped
@@ -24,6 +24,25 @@ services:
       - CLIENT_PASSWORD=${CLIENT_PASSWORD}
       - PROPERTY_REFRESH_INTERVAL_HOURS=${PROPERTY_REFRESH_INTERVAL_HOURS:-1}
     volumes:
+      # Bind mounts for fast-deploy (code changes without rebuilds)
+      # Web application files
+      - ./web_app/app:/app/web/app
+      - ./web_app/main.py:/app/web/main.py
+      - ./web_app/VERSION_INFO:/app/web/VERSION_INFO
+      # Configuration file
+      - ./.env:/app/.env
+      # CLI shared files (accessible to both CLI and web app)
+      - ./defrag_analyzer.py:/app/defrag_analyzer.py
+      - ./utils.py:/app/utils.py
+      - ./holiday_client.py:/app/holiday_client.py
+      - ./school_holiday_client.py:/app/school_holiday_client.py
+      - ./school_holidays.json:/app/school_holidays.json
+      - ./rms_client.py:/app/rms_client.py
+      - ./excel_generator.py:/app/excel_generator.py
+      - ./email_sender.py:/app/email_sender.py
+      # Original CLI files (for completeness)
+      - ./start.py:/app/original/start.py
+      # Regular volumes
       - defrag_logs:/app/logs
       - defrag_output:/app/output
     depends_on:
