--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
       # Regular volumes
       - defrag_logs:/app/logs
       - defrag_output:/app/output
+      - defrag_uploads:/app/web/app/static/uploads
     depends_on:
       postgres:
         condition: service_healthy
@@ -81,4 +82,6 @@ volumes:
   defrag_logs:
     driver: local
   defrag_output:
+    driver: local
+  defrag_uploads:
     driver: local
